@@ -6381,14 +6381,14 @@ you.   The variant @code{mkCharLen} can be used to create a
 @code{CHARSXP} from a buffer possibly containing nuls.
 
 Currently, it is still possible to create @code{CHARSXP}s using
-@code{allocVector} or @code{allocString}; @code{CHARSXP}s created in
-this way will not be captured by the global @code{CHARSXP} cache and
-this should be avoided.  In the future, all @code{CHARSXP}s will be
-captured by the cache and this will allow further optimizations, for
-example, replacing calls to @code{strcmp} with pointer comparisons.  A
-helper macro, @code{CallocCharBuf}, can be used to obtain a temporary
-character buffer for in-place string manipulation: this memory must be
-released using @code{Free}.
+@code{allocVector}; @code{CHARSXP}s created in this way will not be
+captured by the global @code{CHARSXP} cache and this should be avoided.
+In the future, all @code{CHARSXP}s will be captured by the cache and
+this will allow further optimizations, for example, replacing calls to
+@code{strcmp} with pointer comparisons.  A helper macro,
+@code{CallocCharBuf}, can be used to obtain a temporary character buffer
+for in-place string manipulation: this memory must be released using
+@code{Free}.
 
 @node Finding and setting variables, Some convenience functions, Handling character data, Handling R objects in C
 @subsection Finding and setting variables
