@@ -819,10 +819,6 @@ FILE *R_popen(const char *, const char *);
 #endif
 int R_system(const char *);
 
-/* now a macro */
-#define allocString(n)		Rf_allocVector(CHARSXP, n)
-#define Rf_allocString(n)      	Rf_allocVector(CHARSXP, n)
-
 #ifndef R_NO_REMAP
 #define acopy_string		Rf_acopy_string
 #define alloc3DArray            Rf_alloc3DArray
