@@ -1034,7 +1034,8 @@ static Rboolean isCFinalizer(SEXP fun)
 
 static SEXP MakeCFinalizer(R_CFinalizer_t cfun)
 {
-    SEXP s = allocString(sizeof(R_CFinalizer_t));
+    /* FIXME: use RAWSXP here */
+    SEXP s = allocCharsxp(sizeof(R_CFinalizer_t));
     *((R_CFinalizer_t *)CHAR(s)) = cfun;
     return s;
     /*return R_MakeExternalPtr((void *) cfun, R_NilValue, R_NilValue);*/
@@ -1911,11 +1912,13 @@ SEXP attribute_hidden mkPROMISE(SEXP expr, SEXP rho)
 /* All vector objects  must be a multiple of sizeof(ALIGN) */
 /* bytes so that alignment is preserved for all objects */
 
-/* allocString is now a macro */
-
-/* Allocate a vector object.  This ensures only validity of list-like
+/* Allocate a vector object (and also list-like objects).
+   This ensures only validity of list-like
    SEXPTYPES (as the elements must be initialized).  Initializing of
-   other vector types is done in do_makevector */
+   other vector types is done in do_makevector
+   [That comment seems outdated -- CHARSXP, STRSXP, VECSXP, EXPRSXP
+   are initialized.]
+*/
 
 SEXP allocVector(SEXPTYPE type, R_len_t length)
 {
@@ -2118,9 +2121,7 @@ SEXP allocVector(SEXPTYPE type, R_len_t length)
         VALGRIND_MAKE_READABLE(STRING_PTR(s), actual_size);
 #endif
         for (i = 0; i < length; i++)
-        {
             data[i] = R_BlankString;
-        }
     }
     else if (type == CHARSXP)
     {
@@ -2143,6 +2144,12 @@ SEXP allocVector(SEXPTYPE type, R_len_t length)
     }
     /* <FIXME> why not valgrindify LGLSXP, CPLXSXP and RAWSXP? */
     return s;
+}
+
+/* For future hiding of allocVector(CHARSXP) */
+SEXP attribute_hidden allocCharsxp(R_len_t len)
+{
+    return allocVector(CHARSXP, len);
 }
 
 SEXP allocList(int n)
